feat: auth module complete - admin login working